--- a/tea.yaml
+++ b/tea.yaml
@@ -1,13 +1,3 @@
-def add_numbers(a, b):
-    """
-    This function adds two numbers and returns the result.
-
-    :param a: The first number to be added.
-    :param b: The second number to be added.
-    :return: The sum of the two numbers.
-    """
-    return a + b
-
-# 使用函数
-sum_result = add_numbers(5, 10)
-print(f"The sum of 5 and 10 is: {sum_result}")
+btc_price = get_btc_price()
+if btc_price is not None:
+    print(f"Current BTC price: ${btc_price}")
